--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,9 @@
                 "name": "exiftool/exiftool",
                 "version": "12",
                 "source": {
-                    "url": "https://github.com/exiftool/exiftool.git",
+                    "url": "https://github.com/exiftool/exiftool",
                     "type": "git",
-                    "reference": "12.56"
+                    "reference": "12.42"
                 }
             }
         }
@@ -35,7 +35,7 @@
         "doctrine/cache": "^1.0",
         "doctrine/collections": "^1.0",
         "monolog/monolog": "^1.3",
-        "exiftool/exiftool": "^12",
+        "exiftool/exiftool": "*",
         "symfony/console": "^2.1|^3.0",
         "symfony/process": "^2.1|^3.0"
     },
